# win12-desktop

./: .gitignore  .gitmodules  MAINTAINER_RULES.md  README.md  io.github.win12_online.win12_desktop.yml  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: _shared-build.yaml  build.yaml  build.yml  release.yaml  release.yml  update-submodule.yml
tauri/src/: desktop.js
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs
